--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <a id="Pushpa" href="https://drive.google.com/u/1/uc?id=1vKkbFC38tJs9JwgJ6TjFsW8FXW1-1bUv&export=download">
+            <span>Pushpa: The Rise – Part 1</span>
+        </a>
         <a id="Doctor" href="https://drive.google.com/u/6/uc?id=1KH36mRuvGwR18Q2tLzxkqYzo0hUoQoz7&export=download">
             <span class="but1">Button</span>
         </a>
